--- a/apps/fitness-app/src/app/app.component.html
+++ b/apps/fitness-app/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
-  Hello World!
+  <app-header [user]="user$ | async" (logout)="onLogout()"></app-header>
+  <app-nav *ngIf="(user$ | async)?.authenticated"></app-nav>
   <div class="wrapper">
     <router-outlet></router-outlet>
   </div>
