--- a/apps/fitness-app/src/app/components/app-nav/app-nav.component.scss
+++ b/apps/fitness-app/src/app/components/app-nav/app-nav.component.scss
@@ -13,6 +13,7 @@
     font-weight: 500;
     font-size: 16px;
     text-transform: uppercase;
+    text-decoration: none;
     border-bottom: 3px solid transparent;
     &:hover,
     &.active {
