--- a/apps/fitness-app/src/app/health/meals/containers/meals/meals.component.html
+++ b/apps/fitness-app/src/app/health/meals/containers/meals/meals.component.html
@@ -1,1 +1,29 @@
-<div>Meals</div>
+<div class="meals">
+  <div class="meals__title">
+    <h1>
+      <img src="../../../../../assets/img/food.svg" alt="meals" />
+      Your meals
+    </h1>
+    <a class="btn__add" [routerLink]="['../meals/new']">
+      <img src="../../../../../assets/img/add-white.svg" alt="new-meal" />
+      New meal
+    </a>
+  </div>
+  <div *ngIf="(meals$ | async) as meals; else loading">
+    <div class="message" *ngIf="!meals.length">
+      <img src="../../../../../assets/img/face.svg" alt="loading" />
+      No meals, add a new meal to start
+    </div>
+    <list-item
+      *ngFor="let meal of meals"
+      [item]="meal"
+      (remove)="removeMeal($event)"
+    ></list-item>
+  </div>
+  <ng-template #loading>
+    <div class="message">
+      <img src="../../../../../assets/img/loading.svg" alt="loading" />
+      Fetching meals...
+    </div>
+  </ng-template>
+</div>
